--- a/android/wear/build.gradle
+++ b/android/wear/build.gradle
@@ -8,10 +8,10 @@ android
     defaultConfig
     {
         applicationId "net.olejon.spotcommander"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 25
-        versionCode 76
-        versionName "7.6"
+        versionCode 77
+        versionName "7.7"
     }
 
     buildTypes
@@ -27,7 +27,10 @@ android
 
 dependencies
 {
-    compile 'com.google.android.support:wearable:1.4.0'
-    compile 'com.google.android.gms:play-services-wearable:10.0.1'
-    provided 'com.google.android.wearable:wearable:1.0.0'
+    compile 'com.google.android.support:wearable:2.0.0'
+    compile 'com.google.android.gms:play-services-wearable:10.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:percent:25.2.0'
+    provided 'com.google.android.wearable:wearable:2.0.0'
 }
