--- a/android/mobile/build.gradle
+++ b/android/mobile/build.gradle
@@ -3,15 +3,15 @@ apply plugin: 'com.android.application'
 android
 {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
 
     defaultConfig
     {
         applicationId "net.olejon.spotcommander"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 25
-        versionCode 77
-        versionName "7.7"
+        versionCode 79
+        versionName "7.9"
     }
 
     buildTypes
@@ -28,12 +28,14 @@ android
 dependencies
 {
     wearApp project(':wear')
-    compile 'com.google.android.gms:play-services-analytics:10.2.0'
-    compile 'com.google.android.gms:play-services-wearable:10.2.0'
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:design:25.2.0'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
-    compile 'com.android.support:palette-v7:25.2.0'
+    compile 'com.google.android.gms:play-services-analytics:10.2.6'
+    compile 'com.google.android.gms:play-services-wearable:10.2.6'
+    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:palette-v7:25.3.1'
+    compile 'com.android.support:customtabs:25.3.1'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.1'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
 }
