SpotCommander Android App 13.4

--- a/android/wear/src/main/AndroidManifest.xml
+++ b/android/wear/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
             </intent-filter>
         </activity>
 
+        <service android:name=".NotificationWearableListenerService" tools:ignore="ExportedService">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED"/>
+                <data android:scheme="wear" android:host="*" android:path="/notification"/>
+            </intent-filter>
+        </service>
+
         <uses-library android:name="com.google.android.wearable" android:required="true"/>
 
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
