--- a/android/mobile/build.gradle
+++ b/android/mobile/build.gradle
@@ -10,7 +10,7 @@ android
         applicationId "net.olejon.spotcommander"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 13400
+        versionCode 13401
         versionName "13.4"
     }
 
@@ -28,8 +28,9 @@ android
 dependencies
 {
     wearApp project(':wear')
-    compile 'com.google.android.gms:play-services-analytics:11.0.1'
-    compile 'com.google.android.gms:play-services-wearable:11.0.1'
+    compile 'com.google.android.gms:play-services-wearable:11.0.2'
+    compile 'com.google.firebase:firebase-core:11.0.2'
+    compile 'com.google.firebase:firebase-messaging:11.0.2'
     compile 'com.android.support:support-v13:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
@@ -39,3 +40,5 @@ dependencies
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.afollestad.material-dialogs:core:0.9.4.5'
 }
+
+apply plugin: 'com.google.gms.google-services'
