--- a/android/mobile/src/main/AndroidManifest.xml
+++ b/android/mobile/src/main/AndroidManifest.xml
@@ -16,17 +16,14 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:label="@string/project_name"
         android:theme="@style/app_theme"
-        tools:ignore="ExportedReceiver,ManifestResource,UnusedAttribute">
+        tools:ignore="ExportedReceiver,ExportedService,ManifestResource,UnusedAttribute">
         <activity
             android:name=".MainActivity"
             android:label="@string/project_name"
             android:launchMode="singleTop">
             <!--suppress AndroidElementNotAllowed -->
             <layout android:defaultWidth="1200dp" android:defaultHeight="600dp" android:minWidth="240dp" android:minHeight="240dp"/>
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+            <intent-filter><action android:name="android.intent.action.MAIN"/><category android:name="android.intent.category.LAUNCHER"/></intent-filter>
             <meta-data android:name="android.app.shortcuts" android:resource="@xml/shortcuts"/>
         </activity>
         <activity
@@ -67,62 +64,33 @@
             android:name=".ShareActivity"
             android:excludeFromRecents="true"
             android:noHistory="true">
-            <intent-filter>
-                <action android:name="android.intent.action.SEND"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="text/plain"/>
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="http" android:host="open.spotify.com"/>
-                <data android:scheme="https" android:host="open.spotify.com"/>
-                <data android:scheme="http" android:host="play.spotify.com"/>
-                <data android:scheme="https" android:host="play.spotify.com"/>
-                <data android:scheme="spotify"/>
-            </intent-filter>
+            <intent-filter><action android:name="android.intent.action.SEND"/><category android:name="android.intent.category.DEFAULT"/><data android:mimeType="text/plain"/></intent-filter>
+            <intent-filter><action android:name="android.intent.action.VIEW"/><category android:name="android.intent.category.DEFAULT"/><category android:name="android.intent.category.BROWSABLE"/><data android:scheme="http" android:host="open.spotify.com"/><data android:scheme="https" android:host="open.spotify.com"/><data android:scheme="http" android:host="play.spotify.com"/><data android:scheme="https" android:host="play.spotify.com"/><data android:scheme="spotify"/></intent-filter>
         </activity>
         <activity
             android:name=".WidgetActivity"
             android:label="@string/widget_title">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
-            </intent-filter>
+            <intent-filter><action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/></intent-filter>
         </activity>
 
         <receiver android:name=".Widget" android:label="@string/project_name">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
-            </intent-filter>
+            <intent-filter><action android:name="android.appwidget.action.APPWIDGET_UPDATE"/></intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget"/>
         </receiver>
 
         <receiver android:name=".WidgetLarge" android:label="@string/project_name">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
-            </intent-filter>
+            <intent-filter><action android:name="android.appwidget.action.APPWIDGET_UPDATE"/></intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_large"/>
-        </receiver>
-
-        <receiver android:name="com.google.android.gms.analytics.AnalyticsReceiver" android:enabled="true">
-            <intent-filter><action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH"/></intent-filter>
         </receiver>
 
         <service android:name=".RemoteControlService"/>
         <service android:name=".RemoteControlIntentService"/>
-
-        <service android:name=".RemoteControlWearableListenerService" tools:ignore="ExportedService">
-            <intent-filter>
-                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED"/>
-                <data android:scheme="wear" android:host="*" android:path="/remote_control"/>
-            </intent-filter>
-        </service>
-
-        <service android:name="com.google.android.gms.analytics.AnalyticsService" android:enabled="true" android:exported="false"/>
+        <service android:name=".RemoteControlWearableListenerService"><intent-filter><action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED"/><data android:scheme="wear" android:host="*" android:path="/remote_control"/></intent-filter></service>
+        <service android:name=".MyFirebaseMessagingService"><intent-filter><action android:name="com.google.firebase.MESSAGING_EVENT"/></intent-filter></service>
 
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
-        <meta-data android:name="com.google.android.gms.analytics.globalConfigResource" android:resource="@xml/global_tracker"/>
+        <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@drawable/ic_play_arrow_white_24dp"/>
+        <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:resource="@color/light_green"/>
 
     </application>
 
